syntax = "proto3";

package ids;

message UUID {
  uint64 hi = 1;
  uint64 lo = 2;
}

message CardId {
  UUID id = 1;
}

message Owner {
  UUID id = 1;
}
